typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            32,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts:3:5
  |
3 |    [e]: Type
  |     ^

error: TS1166 {
    span: Span {
        lo: BytePos(
            30,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts:3:4
  |
3 |    [e]: Type
  |    ^^^^^^^^^

error: NameNotFound {
    span: Span {
        lo: BytePos(
            35,
        ),
        hi: BytePos(
            39,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName9.ts:3:9
  |
3 |    [e]: Type
  |         ^^^^

